# news_me

./: .gitignore  pyproject.toml
news_me/: main.py  rss_list.cfg
news_me/config/: reader_config.py
news_me/reader/: reader.py
rss_reader/: main.py
